<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:gravity="center_vertical"
    tools:context="com.onvest.irfanagtya.plnpay.RegisterActivity">

    <EditText
        android:id="@+id/nameReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_input"
        android:inputType="text"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/hpReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameReg"
        android:layout_marginTop="5dp"
        android:hint="@string/hp_input"
        android:inputType="text"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/emailReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hpReg"
        android:layout_marginTop="5dp"
        android:hint="@string/mail_input"
        android:inputType="textEmailAddress"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/pwdContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailReg"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/pwdReg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:hint="@string/pwd_input"
            android:inputType="textPassword"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/pwdInvisible"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/fa_invisible_96" />

            <ImageView
                android:id="@+id/pwdVisible"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/fa_visible_96"
                android:visibility="invisible" />

        </RelativeLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/refReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pwdContainer"
        android:layout_marginTop="5dp"
        android:hint="@string/ref_input"
        android:inputType="textEmailAddress"
        android:textSize="18sp" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/refReg"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/daftar_button"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/loginTextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerButton"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/login_text_button"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="16sp" />

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</RelativeLayout>
