<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:gravity="center_vertical"
    tools:context="com.onvest.irfanagtya.plnpay.TambahIDPelActivity">

    <EditText
        android:id="@+id/idPelReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/idpel_input"
        android:inputType="text"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/alamatReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idPelReg"
        android:layout_marginTop="5dp"
        android:hint="Alamat"
        android:inputType="textMultiLine"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/refIDPelReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alamatReg"
        android:layout_marginTop="5dp"
        android:hint="@string/ref_input"
        android:inputType="textEmailAddress"
        android:textSize="18sp" />

    <Button
        android:id="@+id/regIDPelButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/refIDPelReg"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/daftar_button"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</RelativeLayout>
