<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.onvest.irfanagtya.plnpay.LoginActivity">

    <RelativeLayout
        android:id="@+id/loginContainer"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/logoPLN"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:srcCompat="@drawable/plnmobile" />

        <EditText
            android:id="@+id/emailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/logoPLN"
            android:textSize="18sp"
            android:hint="@string/mail_input"
            android:inputType="textEmailAddress" />

        <LinearLayout
            android:id="@+id/pwdContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_below="@+id/emailLogin">

            <EditText
                android:id="@+id/pwdLogin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:textSize="18sp"
                android:hint="@string/pwd_input"
                android:inputType="textPassword" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/pwdInvisible"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/fa_invisible_96"/>

                <ImageView
                    android:id="@+id/pwdVisible"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:visibility="invisible"
                    android:src="@drawable/fa_visible_96" />

            </RelativeLayout>

        </LinearLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/pwdContainer"
            android:background="@android:color/holo_blue_light"
            android:text="@string/login_button"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/registerTextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/loginButton"
            android:text="@string/daftar_text_button"
            android:gravity="center"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="16sp"/>

    </RelativeLayout>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</android.support.constraint.ConstraintLayout>
