<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.onvest.irfanagtya.plnpay.ProfilActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <TableLayout
            android:id="@+id/tabelProfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="User ID"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profilUserID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:padding="5dp"
                    android:text="10001"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="Nama"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profilName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:padding="5dp"
                    android:text="Irfan Murtadho Agtya"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="@string/hp_input"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profilHP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:padding="5dp"
                    android:text="+6281901055508"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="@string/mail_input"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profilEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:padding="5dp"
                    android:text="irfan.agtya@gmail.com"
                    android:textSize="16sp" />

            </TableRow>

        </TableLayout>

        <TableLayout
            android:id="@+id/tabelIDPel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tabelProfil"
            android:layout_marginTop="25dp">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@android:color/holo_blue_light"
                    android:padding="5dp"
                    android:text="@string/idpel_input"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@android:color/holo_blue_dark"
                    android:padding="5dp"
                    android:text="Alamat"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/idpel1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="#EEEEEE"
                    android:padding="5dp"
                    android:paddingEnd="5dp"
                    android:paddingStart="10dp"
                    android:text="0123456778910"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/alamat1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="#E0E0E0"
                    android:padding="5dp"
                    android:paddingEnd="5dp"
                    android:paddingStart="10dp"
                    android:text="Alamat 1"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </TableRow>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white" />

            <TableRow>

                <TextView
                    android:id="@+id/idpel2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="#EEEEEE"
                    android:padding="5dp"
                    android:paddingEnd="5dp"
                    android:paddingStart="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/alamat2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="#E0E0E0"
                    android:padding="5dp"
                    android:paddingEnd="5dp"
                    android:paddingStart="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </TableRow>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white" />

            <TableRow>

                <TextView
                    android:id="@+id/idpel3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="#EEEEEE"
                    android:padding="5dp"
                    android:paddingEnd="5dp"
                    android:paddingStart="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/alamat3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="#E0E0E0"
                    android:padding="5dp"
                    android:paddingEnd="5dp"
                    android:paddingStart="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </TableRow>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white" />

            <TableRow>

                <TextView
                    android:id="@+id/idpel4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="#EEEEEE"
                    android:padding="5dp"
                    android:paddingEnd="5dp"
                    android:paddingStart="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/alamat4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="#E0E0E0"
                    android:padding="5dp"
                    android:paddingEnd="5dp"
                    android:paddingStart="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/addIDPel"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/tabelIDPel"
            android:layout_marginTop="25dp"
            android:background="@android:color/holo_blue_light"
            android:onClick="activityTambahIDPel"
            android:text="Tambah ID Pelanggan"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:id="@+id/floatButton"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="bottom|end"-->
        <!--android:layout_margin="20dp"-->
        <!--android:backgroundTint="@android:color/holo_orange_dark"-->
        <!--app:srcCompat="@drawable/fa_add_64_white" />-->

    <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:id="@+id/floatEdit"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="bottom|end"-->
        <!--android:layout_marginBottom="20dp"-->
        <!--android:layout_marginEnd="80dp"-->
        <!--android:tooltipText="Edit Profil"-->
        <!--android:visibility="invisible"-->
        <!--app:srcCompat="@drawable/fa_edit_64_white" />-->

    <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:id="@+id/floatLogout"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="bottom|end"-->
        <!--android:layout_marginBottom="80dp"-->
        <!--android:layout_marginEnd="20dp"-->
        <!--android:backgroundTint="@android:color/holo_red_dark"-->
        <!--android:tooltipText="Logout"-->
        <!--android:visibility="invisible"-->
        <!--app:srcCompat="@drawable/fa_logout_64_white" />-->

</android.support.design.widget.CoordinatorLayout>
